# otel

./: .gitignore  README.md  mint.json
charts/otel-gateway/: Chart.yaml  values.yaml
examples/expressjs/basic-app/: .instrumentation.js.swp  instrumentation.js  package-lock.json  package.json  server.js
examples/nextjs-opentelemetry-example/: Dockerfile  instrumentation-node.ts  instrumentation.ts  package-lock.json  package.json
examples/python/fastapi/: .env.local  .main.py.swp  README.md  main.py  requirements.txt
examples/python/openllm-examples/llama-openai-pinecone/: example1.py
examples/python/opentelemetry-examples/django/: .env  requirements.txt
integrations/dotnet/: getting-started.md
integrations/java/Automatic/: getting-started.md
integrations/python/django/: getting-started.md
integrations/ruby/: getting-started.md
openllmetry/: pyproject.toml
openllmetry/instrumentation/opentelemetry-instrumentation-langchain/: README.md
openllmetry/instrumentation/opentelemetry-instrumentation-openai/: README.md
openllmetry/instrumentation/transformers/: README.md
openllmetry/opentelemetry/: README.md
openllmetry/opentelemetry/semconv/ai/: __init__.py
