[project]
name = "infrastack-sdk"
version = "0.0.1"
authors = [
  { name="Example Author", email="hello@infrastack.ai" },
]
description = "Instrumentation for LLM frameworks for Infrastack"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[metadata]
name = "infrastack-sdk"
version = "0.0.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*.data*", "*.tests*"]