[project]
name = "infrastack-sdk"
version = "0.0.1"
authors = [
  { name="Example Author", email="hello@infrastack.ai" },
]
description = "Infrastack instrumentation for LLM frameworks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache2 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "inflection>=0.4.0",
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[metadata]
name = "infrastack-sdk"
version = "0.0.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*.data*", "*.tests*"]